# SSATAN-X

./: CMakeLists.txt  LICENSE  README.md  config.json  main.cpp
algorithms/: AndersonTauLeap.cpp  AndersonTauLeap.h  SSA.cpp  SSA.h  SSATANX.cpp  SSATANX.h
contact_network/: ContactNetwork.cpp  ContactNetwork.h  Specie.cpp  Specie.h
utilities/: Settings.cpp  Settings.h  Utility.cpp  Utility.h  types.h
